small overflow issue

--- a/public/styles.css
+++ b/public/styles.css
@@ -13,6 +13,7 @@ html {
 
 body {
     background-color: #339653;
+    overflow-y: hidden;
 }
 
 body::-webkit-scrollbar {
